--- a/popout.html
+++ b/popout.html
@@ -9,10 +9,12 @@
   <body>
     <div class="container">
       <div class="row">
-        <p></p>
+        <ul id="att">
+
+        </ul>
       </div>
     </div>
-    <button class="take-attendance">take Attendance</button>
+    <button class="take-attendance" id="submit">take Attendance</button>
     <script src="script.js"></script>
   </body>
 </html>
